4th Clickventure - button and text overlapping Fix

--- a/docroot/sites/all/themes/ambitious/sass/forms.scss
+++ b/docroot/sites/all/themes/ambitious/sass/forms.scss
@@ -198,7 +198,7 @@ textarea{
     width: 30%;
     float: right; 
     @include breakpoint($mobile){
-      float:none;
+      //float:none;
       width:auto; 
     }
   }
